--- a/year2/adproc/coursework/src/pipesrus/popUp.form
+++ b/year2/adproc/coursework/src/pipesrus/popUp.form
@@ -66,11 +66,8 @@
                                   </Group>
                                   <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Component id="discardButton" min="-2" max="-2" attributes="0"/>
-                                      <Group type="102" attributes="0">
-                                          <Component id="pipeQuantitySpinner" max="32767" attributes="0"/>
-                                          <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
-                                      </Group>
+                                      <Component id="discardButton" max="32767" attributes="0"/>
+                                      <Component id="pipeQuantitySpinner" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
