--- a/year2/adproc/coursework/src/pipesrus/Gui.form
+++ b/year2/adproc/coursework/src/pipesrus/Gui.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
     <Container class="javax.swing.JDialog" name="addOrder">
       <Properties>
@@ -14,21 +14,30 @@
                   <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="pipeSizeDiaLabel" max="32767" attributes="0"/>
-                              <Component id="pipeSizeLengthLabel" alignment="0" max="32767" attributes="0"/>
-                              <Component id="pipeGradeLabel" alignment="0" max="32767" attributes="0"/>
-                              <Component id="pipeColoursLabel" max="32767" attributes="0"/>
-                          </Group>
-                          <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="266" max="-2" attributes="0"/>
+                          <Component id="pipeQuantitySpinner" min="-2" pref="45" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="pipeSizeLengthTextField" min="-2" pref="36" max="-2" attributes="0"/>
-                              <Component id="pipeSizeDiaTextField" min="-2" pref="36" max="-2" attributes="0"/>
-                              <Component id="pipeColoursComboBox" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="pipeGradeComboBox" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                      <Component id="pipeSizeDiaLabel" max="32767" attributes="0"/>
+                                      <Component id="pipeSizeLengthLabel" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="pipeGradeLabel" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="pipeColoursLabel" max="32767" attributes="0"/>
+                                  </Group>
+                                  <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="pipeSizeLengthTextField" min="-2" pref="36" max="-2" attributes="0"/>
+                                      <Component id="pipeSizeDiaTextField" min="-2" pref="36" max="-2" attributes="0"/>
+                                      <Component id="pipeColoursComboBox" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="pipeGradeComboBox" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                              </Group>
+                              <Component id="pipeSizeLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="jSeparator1" min="-2" pref="15" max="-2" attributes="0"/>
+                          <Component id="seperator" min="-2" pref="15" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" attributes="0">
                                   <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
@@ -46,11 +55,6 @@
                                   <Component id="discardOrderButton" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
-                      </Group>
-                      <Component id="pipeSizeLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="266" max="-2" attributes="0"/>
-                          <Component id="pipeQuantitySpinner" min="-2" pref="45" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
@@ -113,7 +117,7 @@
                               </Group>
                           </Group>
                       </Group>
-                      <Component id="jSeparator1" min="-2" pref="147" max="-2" attributes="0"/>
+                      <Component id="seperator" min="-2" pref="147" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
@@ -258,37 +262,10 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pipeInsulCheckBoxActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JSeparator" name="jSeparator1">
+        <Component class="javax.swing.JSeparator" name="seperator">
           <Properties>
             <Property name="orientation" type="int" value="1"/>
           </Properties>
-        </Component>
-      </SubComponents>
-    </Container>
-    <Container class="javax.swing.JDialog" name="Colours">
-
-      <Layout>
-        <DimensionLayout dim="0">
-          <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="colorChooser" min="-2" pref="626" max="-2" attributes="0"/>
-                  <EmptySpace max="32767" attributes="0"/>
-              </Group>
-          </Group>
-        </DimensionLayout>
-        <DimensionLayout dim="1">
-          <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="colorChooser" min="-2" pref="305" max="-2" attributes="0"/>
-                  <EmptySpace max="32767" attributes="0"/>
-              </Group>
-          </Group>
-        </DimensionLayout>
-      </Layout>
-      <SubComponents>
-        <Component class="javax.swing.JColorChooser" name="colorChooser">
         </Component>
       </SubComponents>
     </Container>
@@ -337,7 +314,7 @@
                       <Component id="totalCostLabel" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="70" max="-2" attributes="0"/>
                       <Component id="itemAmountLabel" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="101" max="32767" attributes="0"/>
+                      <EmptySpace pref="107" max="32767" attributes="0"/>
                       <Component id="submitOrdersButton" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="resetOrdersButton" min="-2" max="-2" attributes="0"/>
@@ -452,12 +429,12 @@
     </Component>
     <Component class="javax.swing.JLabel" name="totalCostLabel">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Total Cost: &#xa3;100.50"/>
+        <Property name="text" type="java.lang.String" value="Total Cost: &#xa3;##.##"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="itemAmountLabel">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Amount of items: 30"/>
+        <Property name="text" type="java.lang.String" value="Amount of items: #"/>
       </Properties>
     </Component>
   </SubComponents>
