--- a/year2/adproc/coursework/src/pipesrus/Gui.form
+++ b/year2/adproc/coursework/src/pipesrus/Gui.form
@@ -4,13 +4,7 @@
   <NonVisualComponents>
     <Container class="javax.swing.JDialog" name="addOrder">
       <Properties>
-        <Property name="iconImage" type="java.awt.Image" editor="org.netbeans.modules.form.ComponentChooserEditor">
-          <ComponentRef name="default"/>
-        </Property>
         <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[373, 243]"/>
-        </Property>
-        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[373, 243]"/>
         </Property>
         <Property name="resizable" type="boolean" value="false"/>
@@ -289,6 +283,8 @@
                       <EmptySpace max="32767" attributes="0"/>
                       <Component id="addOrderButton" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
+                      <Component id="editOrderButton" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Component id="deleteOrderButton" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
@@ -313,6 +309,7 @@
                   <Component id="addOrderButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="deleteOrderButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="titleLabel" max="32767" attributes="0"/>
+                  <Component id="editOrderButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="orderScrollPane" min="-2" pref="123" max="-2" attributes="0"/>
@@ -354,6 +351,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addOrderButtonActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="editOrderButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Edit"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="editOrderButtonActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="deleteOrderButton">
