--- a/second/gude/webapp/templates/index.jade
+++ b/second/gude/webapp/templates/index.jade
@@ -18,7 +18,7 @@ body
                   media-body Tasks
     
               li.table-view-cell.media
-                a.navigate-right(href="#" data-transition="slide-in")
+                a.navigate-right(href="timer.html" data-transition="slide-in")
                   span.media-object.pull-left.icon.icon-play
                   .media-body Timer
     
