--- a/second/gude/webapp/templates/details.jade
+++ b/second/gude/webapp/templates/details.jade
@@ -50,9 +50,6 @@ body
                 input(type="text" placeholder="£5 + £5 reimbursement + £2 Premium")
           
           .slide
-            h1 Notes
-            h2 Notes
-            h3 Notes
-            h4 Notes
+            include includes/notes
 
   include includes/scripts
