--- a/second/gude/webapp/templates/settings.jade
+++ b/second/gude/webapp/templates/settings.jade
@@ -24,9 +24,6 @@ body
                   .media-body Your details
 
           .slide
-            h1 Notes
-            h2 Notes
-            h3 Notes
-            h4 Notes
+            include includes/notes
               
   include includes/scripts
