--- a/second/gude/webapp/templates/tasks.jade
+++ b/second/gude/webapp/templates/tasks.jade
@@ -42,9 +42,6 @@ body
                     span.badge.badge-negative X
 
           .slide
-            h1 Notes
-            h2 Notes
-            h3 Notes
-            h4 Notes
+            include includes/notes
 
   include includes/scripts
