--- a/second/gude/webapp/templates/notes.jade
+++ b/second/gude/webapp/templates/notes.jade
@@ -1,8 +1,8 @@
 include includes/head
 body
   header.bar.bar-nav
-    a.icon.icon-home.icon-left-nav.pull-left(href="index.html" data-transition="slide-out")
-    a.icon.icon-home.pull-right(href="index.html" data-transition="slide-out")
+    a.icon.icon-home.icon-left-nav.pull-left(href="home.html" data-transition="slide-out")
+    a.icon.icon-home.pull-right(href="home.html" data-transition="slide-out")
     h1.title Notes
   block content
     .content
