--- a/second/gude/webapp/templates/index.jade
+++ b/second/gude/webapp/templates/index.jade
@@ -7,7 +7,7 @@ body
       h1 Hello, Mystery Shopper
       p Sign in with the details supplied to you
       form
-        .ids
+        .block
           h2 IDs
           section
             label Shopper
@@ -17,6 +17,6 @@ body
             label Assignment
             input(type="text" placeholder="DB5")
 
-        a.btn.btn-positive.btn-block(href="home.html" data-transition="slide-in") Let's shop!
+        a.btn.btn-positive.btn-block(href="location.html" data-transition="slide-in") Let's shop!
 
   include includes/scripts
