Some shit :shit:

--- a/second/gude/webapp/templates/home.jade
+++ b/second/gude/webapp/templates/home.jade
@@ -10,6 +10,9 @@ body
         .slide-group
     
           .slide
+
+            p Your first task is:
+
             ul.table-view
     
               li.table-view-cell.media
