--- a/second/gude/webapp/templates/home.jade
+++ b/second/gude/webapp/templates/home.jade
@@ -29,6 +29,11 @@ body
                 a.navigate-right(href="notes.html" data-transition="slide-in")
                   span.media-object.pull-left.icon.icon-compose
                   .media-body Notes
+
+              li.table-view-cell.media
+                a.navigate-right(href="receipt.html" data-transition="slide-in")
+                  span.media-object.pull-left.icon.icon-bars
+                  .media-body Scan receipt
     
               li.table-view-cell.media
                 a.navigate-right(href="settings.html" data-transition="slide-in")
