--- a/second/gude/webapp/templates/receipt.jade
+++ b/second/gude/webapp/templates/receipt.jade
@@ -1,7 +1,7 @@
 include includes/head
 body
   header.bar.bar-nav
-    a.icon.icon-home.icon-left-nav.pull-left(href="home.html" data-transition="slide-out")
+    a.icon.icon-home.icon-left-nav.pull-left(href="tasks.html" data-transition="slide-out")
     a.icon.icon-home.pull-right(href="home.html" data-transition="slide-out")
     h1.title Scan receipt
   block content
@@ -11,7 +11,7 @@ body
         .slide-group
     
           .slide
-            include includes/timer
+            .receipt
 
           .slide
             include includes/notes
