--- a/second/gude/webapp/templates/includes/timer.jade
+++ b/second/gude/webapp/templates/includes/timer.jade
@@ -9,7 +9,7 @@
     span#sw_s 00
     span#sw_ms 00
     span#sw_status Idle
-  button.btn.btn-negative.btn-block.clear-timer#sw_reset Clear timer
+  button.btn.btn-block.clear-timer#sw_reset Clear timer
   
   p.timer-instructions Messed up? You can always clear the timer.
 
