Added establishment settings section

--- a/second/gude/webapp/templates/details.jade
+++ b/second/gude/webapp/templates/details.jade
@@ -15,39 +15,33 @@ body
       
               .input-row
                 label Full name
-                input(type="text" placeholder="James Bond")
+                input(type="text" placeholder="James Bond" value="James Bond")
+      
+              .table-view-cell.table-view-divider IDs
+            
+              .input-row
+                label Shopper
+                input(type="text" value="007")
       
               .input-row
-                label ID
-                input(type="text" placeholder="007")
+                label Assignment
+                input(type="email" value="DB5")
       
-              .input-row
-                label Assignment ID
-                input(type="email" placeholder="DB5")
-      
+              .table-view-cell.table-view-divider Time
+
               .input-row
                 label Time Frame
-                input(type="text" placeholder="1700-1900")
+                input(type="text" value="17:00 - 19:00")
       
               .input-row
                 label Date
-                input(type="text" placeholder="6th October 2013")
+                input(type="text" value="6th October 2013")
       
+              .table-view-cell.table-view-divider Other
+
               .input-row
-                label Shop
-                input(type="text" placeholder="700 Commercial Road, Portsmouth, PO1 3HE, UK")
-      
-              .input-row
-                label Open
-                input(type="text" placeholder="1700-1900")
-      
-              .input-row
-                label Location
-                input(type="text" placeholder="Known locally as 'central'")
-      
-              .input-row
-                label Assignment Value
-                input(type="text" placeholder="£5 + £5 reimbursement + £2 Premium")
+                label Value
+                input(type="text" value="£12.00")
           
           .slide
             include includes/notes
