--- a/second/gude/webapp/templates/home.jade
+++ b/second/gude/webapp/templates/home.jade
@@ -23,7 +23,7 @@ body
                   media-body More tasks
     
               li.table-view-cell.media
-                a.navigate-right(href="timer.html" data-transition="slide-in")
+                a.navigate-right(href="timer.html" data-ignore="push")
                   span.media-object.pull-left.icon.icon-play
                   .media-body Timer
     
