--- a/second/gude/webapp/templates/settings.jade
+++ b/second/gude/webapp/templates/settings.jade
@@ -14,12 +14,12 @@ body
             ul.table-view
             
               li.table-view-cell.media
-                a.navigate-right(href="#")
+                a.navigate-right(href="estab.html" data-transition="slide-in")
                   span.media-object.pull-left.icon.icon-info
                   .media-body Establishment details
       
               li.table-view-cell.media
-                a.navigate-right( href="details.html" data-transition="slide-in")
+                a.navigate-right(href="details.html" data-transition="slide-in")
                   span.media-object.pull-left.icon.icon-person
                   .media-body Your details
 
