Tasks now link to notes for now

--- a/second/gude/webapp/templates/home.jade
+++ b/second/gude/webapp/templates/home.jade
@@ -11,7 +11,7 @@ body
     
           .slide
 
-            a.current-task(href="tasks.html" data-transition="slide-in")
+            a.current-task(href="notes.html" data-ignore="push")
               p Your current task is:
               p.task Assess outside cleanliness and tidyness
 
