--- a/second/gude/webapp/templates/tasks.jade
+++ b/second/gude/webapp/templates/tasks.jade
@@ -11,69 +11,69 @@ body
 
         li.table-view-cell.table-view-divider Building
         li.table-view-cell
-          a.navigate-right
+          a.navigate-right(href="notes.html" data-ignore="push")
             | Assess outside cleanliness and tidyness
             span.badge.badge-positive ✓
         li.table-view-cell
-          a.navigate-right
+          a.navigate-right(href="notes.html" data-ignore="push")
             | Assess inside cleanliness and tidyness
             span.badge.badge-positive ✓
         li.table-view-cell
-          a.navigate-right
+          a.navigate-right(href="notes.html" data-ignore="push")
             | Amount of buildings to left
             span.badge 1
         li.table-view-cell
-          a.navigate-right
+          a.navigate-right(href="notes.html" data-ignore="push")
             | Amount of buildings to right
             span.badge 3
 
         li.table-view-cell.table-view-divider Queue
 
         li.table-view-cell
-          a.navigate-right
+          a.navigate-right(href="notes.html" data-ignore="push")
             | No of customers in front of you?
             span.badge.badge-negative #
         li.table-view-cell
-          a.navigate-right
+          a.navigate-right(href="notes.html" data-ignore="push")
             | No of cash registers were open?
             span.badge.badge-negative #
         li.table-view-cell
-          a.navigate-right
+          a.navigate-right(href="notes.html" data-ignore="push")
             | No of staff visible behind the counter?
             span.badge.badge-negative #
 
         li.table-view-cell.table-view-divider  Food
 
         li.table-view-cell
-          a.navigate-right
+          a.navigate-right(href="notes.html" data-ignore="push")
             | Order a super deal meal
             span.badge.badge-negative X
         
         li.table-view-cell
-          a.navigate-right
+          a.navigate-right(href="notes.html" data-ignore="push")
             | Happy with the experience?
             span.badge.badge-negative X
 
           
         li.table-view-cell
-          a.navigate-right
+          a.navigate-right(href="notes.html" data-ignore="push")
             | Which product did you order?
             span.badge.badge-negative X
           
         li.table-view-cell
-          a.navigate-right
+          a.navigate-right(href="notes.html" data-ignore="push")
             | Which extras did you order?
             span.badge.badge-negative X
           
         li.table-view-cell
-          a.navigate-right
+          a.navigate-right(href="notes.html" data-ignore="push")
             | Which drink did you order?
             span.badge.badge-negative X
 
         li.table-view-cell.table-view-divider  Other
 
         li.table-view-cell
-          a.navigate-right
+          a.navigate-right(href="notes.html" data-ignore="push")
             | Assess rest room
             span.badge.badge-negative X
 
