Hand in mobile stuff

--- a/second/gude/webapp/templates/estab.jade
+++ b/second/gude/webapp/templates/estab.jade
@@ -23,7 +23,7 @@ body
               h1 Opening times
               p 17:00 - 19:00
 
-              img.map(src="../img/map.jpg")
+              img.map(src="img/map.jpg")
                   
           .slide
             include includes/notes
