--- a/second/gude/webapp/templates/index.jade
+++ b/second/gude/webapp/templates/index.jade
@@ -8,14 +8,14 @@ body
       p Sign in with the details supplied to you
       form
         .block
-          h2 IDs
+          h2 Log in:
           section
-            label Shopper
+            label Shopper ID
             input(type="number" placeholder="007")
 
           section
-            label Assignment
-            input(type="text" placeholder="DB5")
+            label Password
+            input(type="password")
 
         a.btn.btn-positive.btn-block(href="location.html" data-transition="slide-in") Let's shop!
 
