--- a/second/gude/webapp/templates/location.jade
+++ b/second/gude/webapp/templates/location.jade
@@ -8,9 +8,9 @@ body
       p Give us your location and we'll start the timer when you arrive
 
       input.location-input(type="text" placeholder="Portsmouth, UK")
-      img.location-button(src="../img/location.png")
+      img.location-button(src="img/location.png")
 
-      img.map(src="../img/map.jpg")
+      img.map(src="img/map.jpg")
 
       a.btn.btn-positive.btn-block(href="home.html" data-transition="slide-in") Go
 
