--- a/second/gude/webapp/css/_receipt.scss
+++ b/second/gude/webapp/css/_receipt.scss
@@ -4,6 +4,6 @@
 	width: 100%;
 	height: 100%;
 	
-	background: url('../../img/receipt-image.png') no-repeat;
+	background: url('../img/receipt-image.png') no-repeat;
 	background-size: 102%;
 }
